Updated header content and style
Updated the header.html with the correct content and new style.

Updated some layouts for main pages like home.html and page.html.
Added blog and works pages.
Added a new test post called lorem ipsum.
Edited sass files to style the website.

Updated the profile icon and deleted old files.

--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,13 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+navigation:
+    - text: Home
+      url: /
+    - text: Blog
+      url: /blog/
+    - text: Works
+      url: /works/
+    - text: About
+      url: /about/
