--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,9 @@
 title: amarcone42
 email: antonio.marcone@proton.me
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal website created to share my works, thoughts and contacts
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://amarcone.it" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: amarcone42
 github_username:  amarcone42
 
