--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: amarcone42
 email: antonio.marcone@proton.me
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal website created to share my works, thoughts and contacts
+  Programmer who shares his works and interests
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://amarcone.it" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: amarcone42
